# kuka_ik_solver

./: CMakeLists.txt  package.xml  plugin.xml
config/: kr50r2500.yaml
include/kuka_ik_solver/: kuka_ik_solver.hpp
src/kuka_ik_solver/: kuka_ik_solver.cpp
test/: test.cpp
